# nakama-cpp

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.sample  Dockerfile  JUSTFILE  README-C.md  README.md  RELEASEINST.md  TODO.md  Taskfile.yml  dev.md  download_proto.sh  gen_proto.sh  nakama-sdk-config.cmake.in  nakama-sdk-preconfig.cmake.in  portfile.cmake  vcpkg-configuration.json  vcpkg.json  version.cmake
cmake/libHttpClient/: CMakeLists.txt
core/: CMakeLists.txt  buildProtoFiles.cmake
core/common/: BaseClient.cpp  BaseClient.h  CMakeLists.txt  DataHelper.cpp  DataHelper.h  DefaultSession.cpp  DefaultSession.h  NClientInterface.cpp  NError.cpp  NException.cpp  NLogSinkInterface.cpp  NRtError.cpp  NRtException.cpp  NSessionInterface.cpp  NUtils.cpp  RapidjsonHelper.h  Resource.h  StrUtil.cpp  StrUtil.h  Version.cpp.in
core/core-grpc/: CMakeLists.txt  GrpcClient.cpp  GrpcClient.h
core/core-rest/: CMakeLists.txt  RestClient.cpp  RestClient.h  grpc_status_code_enum.h
core/core-rt/: BaseClient.cpp  CMakeLists.txt  NRtClient.cpp  NRtClient.h  NRtClientInterface.cpp  NRtClientProtocolInterface.h  NRtClientProtocol_Json.cpp  NRtClientProtocol_Json.h  NRtClientProtocol_Protobuf.cpp  NRtClientProtocol_Protobuf.h
core/src/: CMakeLists.txt  roots_pem.cpp
example/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
examples/nakama-cmake-client-example/: CMakeLists.txt  README.md  nakama-cmake-client-example.cpp
factory/: CMakeLists.txt  ClientFactory.cpp  NWebsocketsFactory.cpp  SatoriClientFactory.cpp
impl/android/: AndroidCA.cpp  AndroidCA.h  CMakeLists.txt
impl/httpCppRest/: CMakeLists.txt  CppRestUtils.h  NHttpClientCppRest.cpp  NHttpClientCppRest.h
impl/httpCurl/: CMakeLists.txt  NHttpClientLibCurl.cpp  NHttpClientLibCurl.h  NHttpClientLibCurlContext.cpp  NHttpClientLibCurlContext.h
impl/httpLibHttpClient/: CMakeLists.txt  NHttpClientLibHC.cpp  NHttpClientLibHC.h
impl/wsCppRest/: CMakeLists.txt  CppRestUtils.h  NWebsocketCppRest.cpp  NWebsocketCppRest.h
impl/wsLibHttpClient/: CMakeLists.txt  NWebsocketLibHC.cpp  NWebsocketLibHC.h
impl/wsWslay/: CMakeLists.txt  NWebsocketWslay.cpp  NWebsocketWslay.h  NetIO.h  NetIOCurl.h  WslayIOCurl.h  WslayIOInterface.h  sha1.h
integrationtests/: CMakeLists.txt  main.cpp
integrationtests/android/: .gitignore  build.gradle  deploy.sh  settings.gradle  test_android.sh
integrationtests/server/: Dockerfile  docker-compose.yml  main.go
integrationtests/src/: NTest.cpp  NTest.h  NTestLib.cpp  TestGuid.cpp  globals.cpp  globals.h  test_authentication.cpp  test_cancellation.cpp  test_channelMessages.cpp  test_deleteAccount.cpp  test_disconnect.cpp  test_friends.cpp  test_getAccount.cpp  test_groups.cpp  test_leaderboards.cpp  test_linking.cpp  test_listMatches.cpp  test_notifications_rest.cpp  test_profiling.cpp  test_restoreSession.cpp  test_rpc_rest.cpp  test_session.cpp  test_storage.cpp  test_stress.cpp  test_throughput.cpp  test_timeout.cpp  test_tournaments_rest.cpp  test_users.cpp
interface/: CMakeLists.txt  config.h.in
release/nakama-cpp-sdk/: CMakeLists.txt
satori/: CMakeLists.txt  README.md
satori-cpp/: CMakeLists.txt  README.md  buildProtoFiles.cmake
satori-cpp/api/: satori.proto
satori-cpp/include/: SClientInterface.h  SatoriClientFactory.h
satori-cpp/src/: CMakeLists.txt  HardcodedLowLevelSatoriAPI.cpp  HardcodedLowLevelSatoriAPI.h  HardcodedLowLevelSatoriAPI.h.cpp  InternalLowLevelSatoriAPI.cpp  InternalLowLevelSatoriAPI.h  SClientInterface.cpp  SatoriBaseClient.cpp  SatoriBaseClient.h  SatoriClientFactory.cpp  SatoriRestClient.cpp  SatoriRestClient.h  satori.pb.cc
satori-cpp/test/: CMakeLists.txt  CMakePresets.json  main.cpp
satori/src/: CMakeLists.txt  SatoriBaseClient.cpp  SatoriRestClient.cpp  satori.grpc.pb.cc  satori.grpc.pb.h
satori/test/: main.cpp
src/: BaseClient.cpp  BaseClient.h  CMakeLists.txt  ClientFactory.cpp  DataHelper.cpp  DataHelper.h  DefaultClient.cpp  DefaultClient.h  DefaultSession.cpp  DefaultSession.h  GrpcClient.cpp  GrpcClient.h  NError.cpp  NHttpClientCppRest.cpp  NHttpClientCppRest.h  Nakama.cpp  RestClient.cpp  RestClient.h  StrUtil.cpp  default_client.cpp  default_client.h  nakama.cpp  roots_pem.cpp  roots_pem.h  strutil.cpp
src/api/: apigrpc.pb.cc  apigrpc.pb.h
src/log/: NConsoleLogSink.cpp  NLogger.cpp
src/nakama-c/: ClientFactoryC.cpp  DataHelperC.cpp  DataHelperC.h  NClientC.cpp  NSessionC.cpp  NStringDoubleMapC.cpp  NStringMapC.cpp  NakamaC.cpp
src/realtime/: NDefaultWebsocket.cpp  NDefaultWebsocket.h  NIXWebsocket.cpp  NIXWebsocket.h  NRtClient.cpp  NRtClient.h  NRtClientProtocolInterface.h  NRtClientProtocol_Json.cpp  NRtClientProtocol_Json.h  NRtClientProtocol_Protobuf.cpp  NRtClientProtocol_Protobuf.h  NRtDefaultClientListener.cpp  NRtError.cpp  NWebsocketCppRest.cpp  NWebsocketCppRest.h  NWebsocketpp.cpp  NWebsocketpp.h  NWebsockets.cpp  NWebsocketsFactory.cpp
test/: CMakeLists.txt  CMakePresets.json  README.md  TaskExecutor.cpp  TaskExecutor.h  full_example.cpp  main.cpp  nakama-test-config.cmake.in  test.cpp  test.plist  test_authenticate.cpp  test_authentication.cpp  test_base.cpp  test_base.h  test_disconnect.cpp  test_errors.cpp  test_getAccount.cpp  test_groups.cpp  test_main.cpp  test_main.h  test_restoreSession.cpp  test_serverConfig.h  test_storage.cpp  vcpkg-configuration.json  vcpkg.json
test/android/: .gitignore  build.gradle  deploy.sh  settings.gradle
test/c-tests/: c-test-pure.c  c-test.cpp  c-test.h  c-test_authentication.cpp  c-test_realtime.cpp
test/include/: NTestLib.h
test/realtime/: RtClientTestBase.cpp  RtClientTestBase.h  test_authoritative_match.cpp  test_joinChat.cpp  test_match.cpp  test_notifications.cpp  test_parties.cpp  test_realtime.cpp  test_rpc.cpp  test_tournament.cpp
test/server/: docker-compose.yml  go.mod  main.go
test/src/: NCppTest.cpp  NCppTest.h  NTest.cpp  NTest.h  NTestLib.cpp  NTestLib.h  TaskExecutor.h  TestGuid.cpp  TestGuid.h  globals.cpp  (+17 more)
(+1257 files in other folders)
